k8s/fastify-service/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fastify-service-netpol
  namespace: deploy-services
spec:
  podSelector:
    matchLabels:
      app: fastify-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - port: 3001
          protocol: TCP
